@@ -1,11 +1,12 @@
-package aqlaam.version2.service.imp;
+package aqlaam.version2.service.implemntation;
 
-import aqlaam.version2.dto.UserDto;
+import aqlaam.version2.dto.UserRequest;
+import aqlaam.version2.dto.UserResponce;
 import aqlaam.version2.exception.CustomNotFoundException;
 import aqlaam.version2.mapper.UserMapper;
 import aqlaam.version2.model.actors.User;
 import aqlaam.version2.repo.UserRepository;
-import aqlaam.version2.service.IUserService;
+import aqlaam.version2.service.interfaces.IUserService;
 import lombok.RequiredArgsConstructor;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -14,7 +15,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -25,35 +25,35 @@ public class UserService implements IUserService {
     private static final Logger logger = LoggerFactory.getLogger(UserService.class);
 
     @Override
-    public List<UserDto> getAllUsers() {
+    public List<UserResponce> getAllUsers() {
         logger.info("Fetching all users");
         List<User> users = userRepository.findAllByDeletedIsFalse();
         return users.stream()
-                .map(userMapper::entityToDto)
-                .collect(Collectors.toList());
+                .map(userMapper::entityToResponse)
+                .toList();
     }
 
     @Override
-    public UserDto add(UserDto userDto) {
-        logger.info("Creating a new user with email: {}", userDto.toString());
-        User userEntity = userMapper.dtoToEntity(userDto);
+    public UserResponce add(UserRequest userDto) {
+        logger.info("Creating a new user with email: {}", userDto.getEmail());
+        User userEntity = userMapper.requestToEntity(userDto);
         Optional<User> userEntityOptional = userRepository.findByEmail(userEntity.getEmail());
         if(userEntityOptional.isPresent()){
-            throw new CustomNotFoundException("User already exists with same email and username", HttpStatus.BAD_REQUEST);
+            throw new CustomNotFoundException("User already exists with same email", HttpStatus.BAD_REQUEST);
         }
         User savedUserEntity = userRepository.save(userEntity);
         logger.info("User created with id: {}", savedUserEntity.getId());
-        return userMapper.entityToDto(savedUserEntity);
+        return userMapper.entityToResponse(savedUserEntity);
     }
 
 
 
     @Override
-    public UserDto update(Long id, UserDto userDto) {
+    public UserResponce update(Long id, UserRequest userDto) {
         logger.info("Updating User with id: {}", id);
-        User user = userMapper.dtoToEntity(userDto);
-        Optional<User> optionalUser = userRepository.findUserByDeletedIsFalseAndId(id);
+        User user = userMapper.requestToEntity(userDto);
 
+        Optional<User> optionalUser = userRepository.findUserByDeletedIsFalseAndId(id);
         User existingUser = optionalUser.orElseThrow(() -> {
             logger.error("User not found with id: {}", id);
             return new CustomNotFoundException("User not found", HttpStatus.NOT_FOUND);
@@ -65,6 +65,7 @@ public class UserService implements IUserService {
             logger.error("User already exists with same email");
             throw new CustomNotFoundException("User already exists with same email", HttpStatus.BAD_REQUEST);
         }
+
         existingUser.setEmail(user.getEmail());
         existingUser.setFirstName(user.getFirstName());
         existingUser.setLastName(user.getLastName());
@@ -74,30 +75,30 @@ public class UserService implements IUserService {
 
         User savedUser = userRepository.save(existingUser);
         logger.info("User updated with id: {}", savedUser.getId());
-        return userMapper.entityToDto(savedUser);
+        return userMapper.entityToResponse(savedUser);
 
     }
 
     @Override
-    public UserDto getUserByUserName(String userName) {
+    public UserResponce getUserByUserName(String userName) {
         logger.info("Fetching user with user name: {}", userName);
         Optional<User> optionalUser = userRepository.findByUserName(userName);
         if (optionalUser.isEmpty()) {
             logger.error("User not found with name: {}", userName);
             throw new CustomNotFoundException("User not found", HttpStatus.NOT_FOUND);
         }
-        return userMapper.entityToDto(optionalUser.get());
+        return userMapper.entityToResponse(optionalUser.get());
     }
 
     @Override
-    public UserDto getUserByEmail(String email) {
+    public UserResponce getUserByEmail(String email) {
         logger.info("Fetching user with email: {}", email);
         Optional<User> optionalUser = userRepository.findByEmail(email);
         if (optionalUser.isEmpty()) {
             logger.error("User not found with email: {}", email);
             throw new CustomNotFoundException("User not found", HttpStatus.NOT_FOUND);
         }
-        return userMapper.entityToDto(optionalUser.get());
+        return userMapper.entityToResponse(optionalUser.get());
     }
 
     @Override
@@ -114,13 +115,13 @@ public class UserService implements IUserService {
     }
 
     @Override
-    public UserDto getUserById(Long id) {
+    public UserResponce getUserById(Long id) {
         logger.info("Fetching user with id: {}", id);
         Optional<User> optionalUser = userRepository.findUserByDeletedIsFalseAndId(id);
         if (optionalUser.isEmpty()) {
             throw new CustomNotFoundException("User not found", HttpStatus.NOT_FOUND);
         }
-        return userMapper.entityToDto(optionalUser.get());
+        return userMapper.entityToResponse(optionalUser.get());
     }
 
 }
